// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminNotificationsPageComponent should snap when notification edit form expanded for adding notification 1`] = `
<tm-admin-notifications-page
  NotificationEditFormMode={[Function Object]}
  __ngContext__={[Function Number]}
  currentNotificationEditFormMode="0"
  guessTimezone={[Function String]}
  hasNotificationLoadingFailed="false"
  isNotificationEditFormExpanded={[Function Boolean]}
  isNotificationLoading="false"
  notificationEditFormModel={[Function Object]}
  notificationService={[Function NotificationService]}
  notificationsTableRowModels={[Function Array]}
  notificationsTableRowModelsSortBy={[Function Number]}
  notificationsTableRowModelsSortOrder="0"
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <h1>
    Notifications
  </h1><p>
    This page allows you to create and manage notifications which are shown to respective target users when they access TEAMMATES.
  </p><div
    id="notifications-timezone"
  >
    <p>
      All dates are displayed in UTC time.
    </p>
  </div><div>
    <button
      class="btn btn-success"
      disabled=""
      id="btn-add-notification"
    >
      <span>
        <i
          class="fas fa-plus"
        />
         Add New Notification
      </span>
    </button>
  </div><div
    class="margin-top-30px ng-trigger ng-trigger-collapseAnim ng-animating"
    style=""
  >
    <tm-notification-edit-form
      style=""
    >
      <div
        class="card card-plain"
      >
        <div
          class="close-header"
        >
          <button
            aria-label="Close"
            class="btn-close float-end"
            type="button"
          />
        </div>
        <div
          class="card-body"
        >
          <div
            class="card border-primary"
          >
            <div
              class="card-body"
            >
              <div
                class="row text-center"
              >
                <div
                  class="col-md-2 text-md-end fw-bold"
                >
                  <span
                    class="ngb-tooltip-class"
                    ngbtooltip="The intended recipients of this notification."
                  >
                    Target user group
                  </span>
                </div>
                <div
                  class="col-md-auto text-md-start"
                >
                  <select
                    class="form-control form-select ng-untouched ng-pristine ng-valid"
                    id="notification-target-user"
                  >
                    <option
                      value="0: STUDENT"
                    >
                      Students
                    </option>
                    <option
                      value="1: INSTRUCTOR"
                    >
                      Instructors
                    </option>
                    <option
                      value="2: GENERAL"
                    >
                      General (for both students and instructors)
                    </option>
                  </select>
                </div>
              </div>
              <br />
              <div
                class="row text-center"
              >
                <div
                  class="col-md-2 text-md-end fw-bold"
                >
                  <span
                    class="ngb-tooltip-class"
                    ngbtooltip="Different styles correspond to different background colours at display."
                  >
                    Notification style
                  </span>
                </div>
                <div
                  class="col-md-auto text-md-start"
                >
                  <select
                    class="form-control form-select ng-untouched ng-pristine ng-valid"
                    id="notification-style"
                  >
                    <option
                      value="0: DANGER"
                    >
                      Danger (red)
                    </option>
                    <option
                      value="1: DARK"
                    >
                      Dark
                    </option>
                    <option
                      value="2: INFO"
                    >
                      Info (cyan)
                    </option>
                    <option
                      value="3: LIGHT"
                    >
                      Light
                    </option>
                    <option
                      value="4: PRIMARY"
                    >
                      Primary (blue)
                    </option>
                    <option
                      value="5: SECONDARY"
                    >
                      Secondary (grey)
                    </option>
                    <option
                      value="6: SUCCESS"
                    >
                      Success (green)
                    </option>
                    <option
                      value="7: WARNING"
                    >
                      Warning (yellow)
                    </option>
                  </select>
                </div>
                <div
                  class="col-md-auto text-md-middle d-flex mb-0 border border-secondary alert alert-success"
                >
                  <span
                    class="align-self-center"
                  >
                    Style Demonstration
                  </span>
                </div>
              </div>
              <br />
              <div
                class="row text-center"
              >
                <div
                  class="col-md-2 text-md-end fw-bold"
                >
                  <span
                    class="ngb-tooltip-class"
                    ngbtooltip="Enter the name of the notification e.g. Version Changelog 8.9.1."
                  >
                    Title
                  </span>
                </div>
                <div
                  class="col-md-10 text-md-start"
                >
                  <input
                    class="form-control ng-untouched ng-pristine ng-valid"
                    id="notification-title"
                    maxlength="80"
                    placeholder="e.g. Version Changelog 8.9.1"
                    type="text"
                  />
                  <div>
                     80 characters left 
                  </div>
                </div>
              </div>
              <br />
              <div
                class="row text-center"
              >
                <div
                  class="col-md-2 text-md-end fw-bold"
                >
                  <span
                    class="ngb-tooltip-class"
                    ngbtooltip="Message body of the notification."
                  >
                    Message content
                  </span>
                </div>
                <div
                  class="col-md-10 text-md-start"
                >
                  <tm-rich-text-editor
                    id="notification-message"
                  >
                    <div
                      inviewport=""
                    >
                    </div>
                  </tm-rich-text-editor>
                </div>
              </div>
              <br />
            </div>
          </div>
          <div
            class="card border-primary margin-top-20px"
          >
            <div
              class="card-body"
            >
              <div
                class="row text-center"
              >
                <div
                  class="col-md-2 text-md-end fw-bold"
                >
                  <span
                    class="ngb-tooltip-class"
                    ngbtooltip="This timezone is deduced based on your system/browser's settings."
                  >
                    Timezone
                  </span>
                </div>
                <div
                  class="col-md-4 text-md-start"
                  id="submission-status"
                >
                   UTC 
                </div>
              </div>
              <div
                class="row text-center margin-top-20px"
              >
                <div
                  class="col-md-6"
                >
                  <div
                    class="col-12 text-md-start"
                  >
                    <div>
                      <label
                        class="ngb-tooltip-class label-control fw-bold"
                        ngbtooltip="Users will be able to see the notification."
                      >
                         Notification start time 
                      </label>
                    </div>
                  </div>
                  <div
                    class="row text-center align-items-center"
                  >
                    <div
                      class="col-md-7 col-xs-center"
                      id="notification-start-date"
                    >
                      <tm-datepicker>
                        <div
                          class="input-group"
                        >
                          <input
                            aria-label="Date"
                            class="form-control ng-untouched ng-pristine ng-valid"
                            ngbdatepicker=""
                            readonly=""
                            type="text"
                          />
                          <button
                            aria-label="Change date"
                            class="btn btn-light input-group-text"
                            type="button"
                          >
                            <i
                              class="fas fa-calendar-alt"
                            />
                          </button>
                        </div>
                      </tm-datepicker>
                    </div>
                    <div
                      class="col-md-5"
                    >
                      <tm-timepicker
                        id="notification-start-time"
                      >
                        <select
                          aria-label="Select time"
                          class="form-control form-select ng-untouched ng-pristine ng-valid"
                        >
                          <option
                            value="1: Object"
                          >
                             01:00H 
                          </option>
                          <option
                            value="2: Object"
                          >
                             02:00H 
                          </option>
                          <option
                            value="3: Object"
                          >
                             03:00H 
                          </option>
                          <option
                            value="4: Object"
                          >
                             04:00H 
                          </option>
                          <option
                            value="5: Object"
                          >
                             05:00H 
                          </option>
                          <option
                            value="6: Object"
                          >
                             06:00H 
                          </option>
                          <option
                            value="7: Object"
                          >
                             07:00H 
                          </option>
                          <option
                            value="8: Object"
                          >
                             08:00H 
                          </option>
                          <option
                            value="9: Object"
                          >
                             09:00H 
                          </option>
                          <option
                            value="10: Object"
                          >
                             10:00H 
                          </option>
                          <option
                            value="11: Object"
                          >
                             11:00H 
                          </option>
                          <option
                            value="12: Object"
                          >
                             12:00H 
                          </option>
                          <option
                            value="13: Object"
                          >
                             13:00H 
                          </option>
                          <option
                            value="14: Object"
                          >
                             14:00H 
                          </option>
                          <option
                            value="15: Object"
                          >
                             15:00H 
                          </option>
                          <option
                            value="16: Object"
                          >
                             16:00H 
                          </option>
                          <option
                            value="17: Object"
                          >
                             17:00H 
                          </option>
                          <option
                            value="18: Object"
                          >
                             18:00H 
                          </option>
                          <option
                            value="19: Object"
                          >
                             19:00H 
                          </option>
                          <option
                            value="20: Object"
                          >
                             20:00H 
                          </option>
                          <option
                            value="21: Object"
                          >
                             21:00H 
                          </option>
                          <option
                            value="22: Object"
                          >
                             22:00H 
                          </option>
                          <option
                            value="23: Object"
                          >
                             23:00H 
                          </option>
                          <option
                            value="0: Object"
                          >
                            23:59H
                          </option>
                        </select>
                      </tm-timepicker>
                    </div>
                  </div>
                </div>
                <div
                  class="col-md-6 border-left-gray"
                >
                  <div
                    class="row text-center"
                  >
                    <div
                      class="col-12 text-md-start ms-md-2"
                    >
                      <label
                        class="ngb-tooltip-class label-control fw-bold"
                        ngbtooltip="Notification will be hidden from users."
                      >
                         Notification end time 
                      </label>
                    </div>
                  </div>
                  <div
                    class="row align-items-center"
                  >
                    <div
                      class="col-md-7 col-xs-center"
                      id="notification-end-date"
                    >
                      <tm-datepicker>
                        <div
                          class="input-group"
                        >
                          <input
                            aria-label="Date"
                            class="form-control ng-untouched ng-pristine ng-valid"
                            ngbdatepicker=""
                            readonly=""
                            type="text"
                          />
                          <button
                            aria-label="Change date"
                            class="btn btn-light input-group-text"
                            type="button"
                          >
                            <i
                              class="fas fa-calendar-alt"
                            />
                          </button>
                        </div>
                      </tm-datepicker>
                    </div>
                    <div
                      class="col-md-5"
                    >
                      <tm-timepicker
                        id="notification-end-time"
                      >
                        <select
                          aria-label="Select time"
                          class="form-control form-select ng-untouched ng-pristine ng-valid"
                        >
                          <option
                            value="1: Object"
                          >
                             01:00H 
                          </option>
                          <option
                            value="2: Object"
                          >
                             02:00H 
                          </option>
                          <option
                            value="3: Object"
                          >
                             03:00H 
                          </option>
                          <option
                            value="4: Object"
                          >
                             04:00H 
                          </option>
                          <option
                            value="5: Object"
                          >
                             05:00H 
                          </option>
                          <option
                            value="6: Object"
                          >
                             06:00H 
                          </option>
                          <option
                            value="7: Object"
                          >
                             07:00H 
                          </option>
                          <option
                            value="8: Object"
                          >
                             08:00H 
                          </option>
                          <option
                            value="9: Object"
                          >
                             09:00H 
                          </option>
                          <option
                            value="10: Object"
                          >
                             10:00H 
                          </option>
                          <option
                            value="11: Object"
                          >
                             11:00H 
                          </option>
                          <option
                            value="12: Object"
                          >
                             12:00H 
                          </option>
                          <option
                            value="13: Object"
                          >
                             13:00H 
                          </option>
                          <option
                            value="14: Object"
                          >
                             14:00H 
                          </option>
                          <option
                            value="15: Object"
                          >
                             15:00H 
                          </option>
                          <option
                            value="16: Object"
                          >
                             16:00H 
                          </option>
                          <option
                            value="17: Object"
                          >
                             17:00H 
                          </option>
                          <option
                            value="18: Object"
                          >
                             18:00H 
                          </option>
                          <option
                            value="19: Object"
                          >
                             19:00H 
                          </option>
                          <option
                            value="20: Object"
                          >
                             20:00H 
                          </option>
                          <option
                            value="21: Object"
                          >
                             21:00H 
                          </option>
                          <option
                            value="22: Object"
                          >
                             22:00H 
                          </option>
                          <option
                            value="23: Object"
                          >
                             23:00H 
                          </option>
                          <option
                            value="0: Object"
                          >
                            23:59H
                          </option>
                        </select>
                      </tm-timepicker>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="row margin-top-20px"
          >
            <div
              class="col-12 text-center"
            >
              <span
                class="loader"
              />
              <div>
                <button
                  class="btn btn-primary"
                  id="btn-create-notification"
                  type="button"
                >
                  Create Notification 
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </tm-notification-edit-form>
  </div><tm-loading-retry>
    <div
      class="margin-top-30px"
    >
      <div>
        <div
          class="alert alert-warning margin-top-30px"
          role="alert"
        >
           You have not created any notifications yet. Use the form above to create a notification. 
        </div>
      </div>
    </div>
    <br />
  </tm-loading-retry>
</tm-admin-notifications-page>
`;

exports[`AdminNotificationsPageComponent should snap when notifications are loading 1`] = `
<tm-admin-notifications-page
  NotificationEditFormMode={[Function Object]}
  __ngContext__={[Function Number]}
  currentNotificationEditFormMode="0"
  guessTimezone={[Function String]}
  hasNotificationLoadingFailed="false"
  isNotificationEditFormExpanded="false"
  isNotificationLoading={[Function Boolean]}
  notificationEditFormModel={[Function Object]}
  notificationService={[Function NotificationService]}
  notificationsTableRowModels={[Function Array]}
  notificationsTableRowModelsSortBy={[Function Number]}
  notificationsTableRowModelsSortOrder="0"
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <h1>
    Notifications
  </h1><p>
    This page allows you to create and manage notifications which are shown to respective target users when they access TEAMMATES.
  </p><div
    id="notifications-timezone"
  >
    <p>
      All dates are displayed in UTC time.
    </p>
  </div><div>
    <button
      class="btn btn-success"
      disabled=""
      id="btn-add-notification"
    >
      <span>
        <i
          class="fas fa-plus"
        />
         Add New Notification
      </span>
    </button>
  </div><tm-loading-retry>
    <div
      class="margin-top-30px"
    >
      <tm-loading-spinner>
        <div
          class="loading-container"
        >
          <div
            class="row spinner-border text-primary"
            role="status"
          />
          <div
            class="row text-secondary"
          >
            Loading...
          </div>
        </div>
      </tm-loading-spinner>
    </div>
    <br />
  </tm-loading-retry>
</tm-admin-notifications-page>
`;

exports[`AdminNotificationsPageComponent should snap when notifications failed to load 1`] = `
<tm-admin-notifications-page
  NotificationEditFormMode={[Function Object]}
  __ngContext__={[Function Number]}
  currentNotificationEditFormMode="0"
  guessTimezone={[Function String]}
  hasNotificationLoadingFailed={[Function Boolean]}
  isNotificationEditFormExpanded="false"
  isNotificationLoading={[Function Boolean]}
  notificationEditFormModel={[Function Object]}
  notificationService={[Function NotificationService]}
  notificationsTableRowModels={[Function Array]}
  notificationsTableRowModelsSortBy={[Function Number]}
  notificationsTableRowModelsSortOrder="0"
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <h1>
    Notifications
  </h1><p>
    This page allows you to create and manage notifications which are shown to respective target users when they access TEAMMATES.
  </p><div
    id="notifications-timezone"
  >
    <p>
      All dates are displayed in UTC time.
    </p>
  </div><div>
    <button
      class="btn btn-success"
      disabled=""
      id="btn-add-notification"
    >
      <span>
        <i
          class="fas fa-plus"
        />
         Add New Notification
      </span>
    </button>
  </div><tm-loading-retry>
    <div
      class="text-center"
    >
      <p
        class="text-muted m-1"
      >
        Failed to load data
      </p>
      <button
        class="btn btn-primary"
      >
        <i
          aria-hidden="true"
          class="fas fa-redo"
        />
         Retry
      </button>
    </div>
  </tm-loading-retry>
</tm-admin-notifications-page>
`;

exports[`AdminNotificationsPageComponent should snap with default view 1`] = `
<tm-admin-notifications-page
  NotificationEditFormMode={[Function Object]}
  __ngContext__={[Function Number]}
  currentNotificationEditFormMode="0"
  guessTimezone={[Function String]}
  hasNotificationLoadingFailed="false"
  isNotificationEditFormExpanded="false"
  isNotificationLoading={[Function Boolean]}
  notificationEditFormModel={[Function Object]}
  notificationService={[Function NotificationService]}
  notificationsTableRowModels={[Function Array]}
  notificationsTableRowModelsSortBy={[Function Number]}
  notificationsTableRowModelsSortOrder="0"
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <h1>
    Notifications
  </h1><p>
    This page allows you to create and manage notifications which are shown to respective target users when they access TEAMMATES.
  </p><div
    id="notifications-timezone"
  >
    <p>
      All dates are displayed in UTC time.
    </p>
  </div><div>
    <button
      class="btn btn-success"
      disabled=""
      id="btn-add-notification"
    >
      <span>
        <i
          class="fas fa-plus"
        />
         Add New Notification
      </span>
    </button>
  </div><tm-loading-retry>
    <div
      class="margin-top-30px"
    >
      <tm-loading-spinner>
        <div
          class="loading-container"
        >
          <div
            class="row spinner-border text-primary"
            role="status"
          />
          <div
            class="row text-secondary"
          >
            Loading...
          </div>
        </div>
      </tm-loading-spinner>
    </div>
    <br />
  </tm-loading-retry>
</tm-admin-notifications-page>
`;
